<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="mul_key_action"
        android:title="@string/mul_key_action"
        android:summary="@string/mul_key_action_summary"/>
    <SwitchPreference
        android:key="button2d_back_visible"
        android:title="@string/button2d_back_visible"
        android:summary="@string/button2d_back_visible_summary"/>
    <SwitchPreference
        android:key="calibration_prompt"
        android:title="@string/calibration_prompt_title"
        android:summary="@string/calibration_prompt_summary"/>
    <SwitchPreference
        android:key="usb_boot_mode"
        android:title="@string/usb_boot_mode_title"
        android:summary="@string/usb_boot_mode_summary"/>
    <SwitchPreference
        android:key="otg_charge_mode"
        android:title="@string/otg_charge_mode_title"
        android:summary="@string/otg_charge_mode_summary"/>
    <SwitchPreference
        android:key="auto_recenter_mode"
        android:title="@string/auto_recenter_mode_title"
        android:summary="@string/auto_recenter_mode_summary"/>
    <SwitchPreference
        android:key="auto_sleep_mode"
        android:title="@string/auto_sleep_mode_title"
        android:summary="@string/auto_sleep_mode_summary"/>
    <SwitchPreference
        android:key="charging_while_using"
        android:title="@string/charging_while_using_title"
        android:summary="@string/charging_while_using_summary"/>
    <SwitchPreference
        android:key="enable_wfd_sink_device_speaker"
        android:title="@string/pvr_out_proxy_mode_title"
        android:summary="@string/pvr_out_proxy_mode_summary"/>
    <SwitchPreference
        android:key="display_permissions_prompt"
        android:title="@string/pvr_display_permissions_prompt_title"/>
    <SwitchPreference
        android:key="monocular_miracast_display_mode"
        android:title="@string/pvr_mono_cast_mode_title"
        android:summary="@string/pvr_mono_cast_mode_summary"/>
</PreferenceScreen>