<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="country_region_code"
        android:title="@string/country_region_code_title"
        android:summary="@string/device_info_default" />

    <SwitchPreference
        android:key="wake_up_mode"
        android:title="@string/pico_intelligent_awaken"
        android:summary="@string/pico_intelligent_awaken_sum"/>

    <Preference
        android:key="screen_off_delay"
        android:title="@string/screen_off_delay_title" />

    <Preference
        android:key="system_sleep_delay"
        android:title="@string/system_sleep_delay_title" />

    <SwitchPreference
        android:key="accept_system_updates"
        android:title="@string/accept_system_updates"/>

    <SwitchPreference
        android:key="geo_magnetic_calibration"
        android:title="@string/geo_magnetic_calibration_title"
        android:summary="@string/geo_magnetic_calibration_summary"/>
</PreferenceScreen>