<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="software_version"
        android:title="@string/software_version_title"
        android:summary="@string/device_info_default" />
    <Preference
        android:key="hardware_version"
        android:title="@string/hardware_version_title"
        android:summary="@string/device_info_default" />
    <Preference
        android:key="wifi_mac_address"
        android:title="@string/status_wifi_mac_address"
        android:summary="@string/device_info_not_available" />
    <Preference
        android:key="bluetooth_mac_address"
        android:title="@string/status_bt_address"
        android:summary="@string/device_info_not_available" />
</PreferenceScreen>